--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -10,7 +10,7 @@
     border-right: var(--border-button);
     border-bottom: var(--border-button);
     outline: none;
-    color: #333; /* Adicionado: Define a cor do texto padrão */
+    color: #333;
     font-weight: 700;
 }
 
@@ -28,7 +28,7 @@
 
 .button.operation {
     background-color: #fa8231;
-    color: #fff; /* Cor do texto para botões de operação */
+    color: #fff; 
 }
 
 .button.operation:active {
